Fix overlap Login and Register as well as fixed the link of the product page

--- a/css/style.css
+++ b/css/style.css
@@ -357,3 +357,8 @@ footer .copyright a:hover {
 .colorOrgange{
   color: #FF7F50;
 }
+
+#loginFalse{
+  display: flex !important;
+  align-items: center;
+}
